--- a/Proyecto_3_icfes.ipynb
+++ b/Proyecto_3_icfes.ipynb
@@ -6,7 +6,6 @@
       "name": "proyecto_3_icfes.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMYRnpcYoWPOT1tyJHeRUPx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/BautistaDavid/Proyectos_ClaseML/blob/corte_1/proyecto_3_icfes.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/BautistaDavid/Proyectos_ClaseML/blob/corte_1/Proyecto_3_icfes.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -68,7 +67,7 @@
         },
         "outputId": "125f2d32-f3fd-4a1c-dedc-868b161ea1c3"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -149,7 +148,7 @@
       "metadata": {
         "id": "jU8Ow2QFQFrL"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -160,7 +159,7 @@
       "metadata": {
         "id": "hTiyQORaYxea"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -187,7 +186,7 @@
         "id": "DfyKZtbxZHx9",
         "outputId": "31dbabf3-1b46-4c02-e35a-3ce6a9a0692d"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -225,7 +224,7 @@
     {
       "cell_type": "code",
       "source": [
-        "interact.filtrar(\"variable>230\",col=\"PUNT_GLOBAL\")"
+        "interact.filtrar(\"variable>230\",col=\"PUNT_GLOBAL\")  # usamos el metodo para filtrar columnas numericas "
       ],
       "metadata": {
         "colab": {
@@ -234,7 +233,7 @@
         "id": "v9Q0srzrabiv",
         "outputId": "07e73d1b-b4b4-4dc6-eaca-9448b887d8dd"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -266,7 +265,7 @@
     {
       "cell_type": "code",
       "source": [
-        "interact.summary_col(\"PERCENTIL_GLOBAL\")"
+        "interact.summary_col(\"PERCENTIL_GLOBAL\")   #probamos el metodo para obtener información estadistica "
       ],
       "metadata": {
         "colab": {
@@ -275,7 +274,7 @@
         "id": "r-Qaqptwb5hf",
         "outputId": "3a24ef18-75d8-4b92-dd05-af7c9fa1ebc9"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -293,7 +292,7 @@
     {
       "cell_type": "code",
       "source": [
-        "interact.filtrar(\"variable>99 and variable<105\",col=\"PUNT_GLOBAL\")"
+        "interact.filtrar(\"variable>99 and variable<105\",col=\"PUNT_GLOBAL\") # probamos el metodo de filtrado incluso usando un operador logico "
       ],
       "metadata": {
         "colab": {
@@ -302,7 +301,7 @@
         "id": "tUmAxiVjeQvR",
         "outputId": "73c59972-1858-4f2a-b18e-2e9d1c17ffc2"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
