--- a/Proyecto_9.ipynb
+++ b/Proyecto_9.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Proyecto_9.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPyl8RmvsfGwSr9dmuypJ+Y",
+      "authorship_tag": "ABX9TyNWwqwdkdis0LbbrAB53Nw7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,15 +28,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## **Prediccion de puntajes Prueba Saber Economía**"
+      ],
+      "metadata": {
+        "id": "j_0YSuw051HF"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": null,
       "metadata": {
         "id": "54PrI6NHhcFH"
       },
       "outputs": [],
       "source": [
         "import pandas as pd \n",
-        "\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.preprocessing import StandardScaler\n",
         "from sklearn.linear_model import LinearRegression\n",
@@ -45,8 +53,7 @@
         "from sklearn.ensemble import RandomForestRegressor\n",
         "import warnings\n",
         "import seaborn as sns \n",
-        "from sklearn.tree import DecisionTreeRegressor\n",
-        "import xgboost as xgb"
+        "from sklearn.tree import DecisionTreeRegressor"
       ]
     },
     {
@@ -449,7 +456,7 @@
         },
         "outputId": "b294ec5b-9d35-4ae5-d223-f401afd5b4b8"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -492,7 +499,7 @@
         },
         "outputId": "2ed090a7-ccc3-4daf-8f60-2a7c0cb01b0e"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -536,7 +543,7 @@
         "id": "TKIw6Y9IHoN-",
         "outputId": "6edc011f-59d6-45bd-9a77-339c0caa4f25"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -563,7 +570,7 @@
         "id": "17DrG3J8Pre3",
         "outputId": "340db70b-ed8b-43bf-d3e1-f133ad807b11"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -607,7 +614,7 @@
         "id": "We2EKocQPrh8",
         "outputId": "0a266daf-cf8b-455e-fafc-de6c4af096b9"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -633,7 +640,7 @@
         "id": "zKk2GyFPPrkq",
         "outputId": "7f0c1e80-02f8-498d-ada8-f168e6fe1170"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -675,7 +682,7 @@
         "id": "55a7FNdwcfxD",
         "outputId": "881f5240-d518-4c36-c2b4-8cc4a874febf"
       },
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
