--- a/Exploratory_Data_Analysis/EDA_data_airbnb_new_york.ipynb
+++ b/Exploratory_Data_Analysis/EDA_data_airbnb_new_york.ipynb
@@ -10,7 +10,6 @@
         "xGJc69q0Vaao",
         "yJKCkPKHdMM5"
       ],
-      "authorship_tag": "ABX9TyO3GFqzeYcHtlRchzJ8O5ZG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,31 +28,19 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/BautistaDavid/Proyectos_ClaseML/blob/corte_2/Proyecto5_exploracion_datos_airbnb.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/BautistaDavid/Machine-Learning-Class-2022/blob/main/Exploratory_Data_Analysis/EDA_data_airbnb_new_york.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "!pip install squarify"
+        "# **Exploring New York city Airbnb Data**\n",
+        "\n",
+        "We are going to carry out an exploratory data analysis of some data from the company Airbnb available in [Kaggle](https://www.kaggle.com/code/dgomonov/data-exploration-on-nyc-airbnb/data). This analysis will have different sections that will allow us to understand how the data is composed, correct some problems around them and after this a statistical analysis and also a visualization "
       ],
       "metadata": {
-        "id": "7hEsC8jpqvS6",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "23a405fe-34c2-461b-eeb9-396ebbdb927c"
-      },
-      "execution_count": 69,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: squarify in /usr/local/lib/python3.7/dist-packages (0.4.3)\n"
-          ]
-        }
-      ]
+        "id": "quGREa3bXuKk"
+      }
     },
     {
       "cell_type": "code",
@@ -64,23 +51,13 @@
         "import geopy.distance \n",
         "import matplotlib.pyplot as plt\n",
         "import pandas as pd \n",
-        "import seaborn as sns \n",
-        "# import squarify as sq \n"
+        "import seaborn as sns "
       ],
       "metadata": {
         "id": "76k2_k9WhFTE"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# **Exploring New York city Airbnb Data**"
-      ],
-      "metadata": {
-        "id": "quGREa3bXuKk"
-      }
     },
     {
       "cell_type": "code",
@@ -90,7 +67,7 @@
       "metadata": {
         "id": "s6vb-lSuZaSz"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -124,7 +101,7 @@
         "id": "gcMMv6LJU5YI",
         "outputId": "fedfcb0d-0421-419b-e647-dc67f28d41fd"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -517,7 +494,7 @@
         "id": "U_56maG7U7o4",
         "outputId": "89881237-c5cc-4588-e484-ee8eeb465715"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -921,7 +898,7 @@
         "id": "p9mfy2zxVnpo",
         "outputId": "9b2797bd-2524-4b78-f2db-2969501c5a84"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -956,7 +933,7 @@
         "id": "gUaFSjGQXiJd",
         "outputId": "d7a5caee-ef69-4424-c5df-b91f562eee8b"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -996,7 +973,7 @@
         "id": "C1u5eyLdWalf",
         "outputId": "a06b52b9-e417-4e70-edfd-01a82d3f3be9"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1048,7 +1025,7 @@
       "metadata": {
         "id": "tA7xbj1SY2Aj"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1073,7 +1050,7 @@
         },
         "outputId": "5b7bb429-9a0f-43ff-dfb7-47d2a05a3318"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1144,13 +1121,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "IfbpM2DJQh-9",
         "outputId": "1f8bb201-35e5-4b74-dba9-14519bbcfd2c"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1371,13 +1347,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "4KUg9Om1TY7j",
         "outputId": "d817a09a-6b14-486a-f6e0-d864c0256a03"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1417,7 +1392,7 @@
       "metadata": {
         "id": "Vi9VAEtZX8rw"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1436,13 +1411,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "elNes2UUM0tf",
         "outputId": "033b414c-e604-416e-c8a3-fe56c07216e5"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1697,7 +1671,7 @@
       "metadata": {
         "id": "Jv-laEjCSS-4"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1722,7 +1696,7 @@
         "id": "x8RQXtyh4qSa",
         "outputId": "5a23e1af-1bee-43fc-c05b-095767e39574"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1960,7 +1934,7 @@
         "id": "CbTDKV8AjjTt",
         "outputId": "a7670aea-9ad8-404c-c01e-d8dd2af176e2"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2157,7 +2131,7 @@
         "id": "NdV8F5VA69fM",
         "outputId": "dc0702f3-7617-42c7-b619-a7ebd904c15b"
       },
-      "execution_count": 126,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2198,7 +2172,7 @@
       "metadata": {
         "id": "JOcWlH-Y_oxW"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2226,7 +2200,7 @@
       "metadata": {
         "id": "-q-RgNKxIfKH"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2237,7 +2211,7 @@
       "metadata": {
         "id": "kVm64kf4bq4P"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2283,7 +2257,7 @@
         "id": "CVMqJD2Hdy_0",
         "outputId": "f24bd84e-60cd-4d5b-ce02-04c8a76aa700"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2316,7 +2290,7 @@
         "id": "Xl0iS2IhdLUo",
         "outputId": "fbfdf85c-ae90-41a0-925e-b803d917b849"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2374,7 +2348,7 @@
       "metadata": {
         "id": "JxOACcGEOEI9"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2410,7 +2384,7 @@
       "metadata": {
         "id": "dci4OiNLjDMN"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2423,7 +2397,7 @@
       "metadata": {
         "id": "Vl1Gh1MvjqmE"
       },
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2466,7 +2440,7 @@
       "metadata": {
         "id": "Dft05hwqjdhg"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2491,7 +2465,7 @@
         "id": "Zahg5tj1mxU2",
         "outputId": "fe9e58f7-ff7c-4eef-d0ad-cb8e3464878d"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2686,7 +2660,7 @@
         "id": "bwvY5gGjb3ZV",
         "outputId": "81f95837-ecc3-4210-9647-0ee80f05bf01"
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2725,7 +2699,7 @@
         },
         "outputId": "d27ec458-456e-4814-afba-ff18e050732a"
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2906,7 +2880,7 @@
         "id": "mjjtvOz4uzWR",
         "outputId": "ef434094-8e31-4a4c-dc0d-d1b1ae9756c1"
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2964,7 +2938,7 @@
         },
         "outputId": "ac785e70-67b1-42d1-fe6c-771ed3f34d83"
       },
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3028,7 +3002,7 @@
         "id": "uMx51yawdijr",
         "outputId": "21ef89eb-70c5-4427-b470-d72245d482b9"
       },
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3093,7 +3067,7 @@
         "id": "BzeVPp6ebu-x",
         "outputId": "07635a7f-5d99-4ea2-e44a-0b439692285a"
       },
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3122,7 +3096,7 @@
         "id": "pqAXUDJmeJ-t",
         "outputId": "01f49625-9ec1-498b-909d-336deedfa1e3"
       },
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3320,7 +3294,7 @@
         },
         "outputId": "b4f92079-83c8-4162-fc32-90610d939a69"
       },
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3349,7 +3323,7 @@
         "id": "Zi1jwrfHfYIu",
         "outputId": "8dd92e79-35f0-4c22-e73a-e6404b04e439"
       },
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3547,7 +3521,7 @@
         "id": "iPwMiW4Cr_cY",
         "outputId": "0451d75c-504e-4bc2-c851-3b8bac8bd421"
       },
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3576,7 +3550,7 @@
         "id": "xH1VHqVkiB0b",
         "outputId": "8571e9d0-cbf0-42ac-9740-5a4b3431835a"
       },
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3774,7 +3748,7 @@
         "id": "99-0Y0MUtbEW",
         "outputId": "28b2095e-f5ae-4a7f-c622-ba84deba5539"
       },
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3803,7 +3777,7 @@
         "id": "w5I2SN7Oi_Hb",
         "outputId": "b50c0708-6ee3-44cf-8955-6861f62d12e6"
       },
-      "execution_count": 109,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3999,7 +3973,7 @@
         "id": "4SDljraGvO0L",
         "outputId": "aa20f89a-3679-4909-8706-f0296ca20ec5"
       },
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4059,7 +4033,7 @@
         "id": "zdTAa9U694cG",
         "outputId": "8e13f48d-bdee-4de1-9437-59e572987c08"
       },
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4119,7 +4093,7 @@
         "id": "gxAxg6JTALfl",
         "outputId": "fc54c514-8d90-41d7-8745-d22eed6bd1cb"
       },
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4167,7 +4141,7 @@
         "id": "_Hv9m5QSDL5n",
         "outputId": "c3418738-beba-4524-f837-94e6f7ffa0a7"
       },
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4215,7 +4189,7 @@
         "id": "1-KXP5Pb95Da",
         "outputId": "ce0604bf-5964-4bbd-d67a-744ff863b59f"
       },
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4253,7 +4227,7 @@
         "id": "aVMDctJcyD_N",
         "outputId": "7419d64d-d7c2-47c9-fe65-a711538e8226"
       },
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4282,7 +4256,7 @@
         "id": "9UoFZpXIrOh8",
         "outputId": "8fa6ead8-ae57-42bc-faa6-c1dd011c1f14"
       },
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4320,7 +4294,7 @@
       "metadata": {
         "id": "FZ55NeVKASoB"
       },
-      "execution_count": 117,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4336,7 +4310,7 @@
         "id": "oDsuBICLmkPH",
         "outputId": "6d2c7b5d-a02f-4b8a-8037-1ec5c2f3864c"
       },
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4363,7 +4337,7 @@
         "id": "LRpHFTERWLq8",
         "outputId": "bd4bc24b-292d-4b30-c48b-dffe384fdd4b"
       },
-      "execution_count": 119,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4390,7 +4364,7 @@
         "id": "ZJrjxqSrWMAd",
         "outputId": "06864f35-9b4e-4ac4-e583-bde6f2544341"
       },
-      "execution_count": 120,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4417,7 +4391,7 @@
         "id": "yc89Y6Lgex2v",
         "outputId": "7ca87e1d-20ca-4f34-847f-83c97698c7ba"
       },
-      "execution_count": 121,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4445,7 +4419,7 @@
         "id": "A0VjX4mJzh4s",
         "outputId": "9eab9c19-5da7-4603-ae94-566ed56cdc8a"
       },
-      "execution_count": 122,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4610,7 +4584,7 @@
         "id": "IoVywsEs0BW5",
         "outputId": "03b452cc-205f-4a7a-8cf2-42ce539455a4"
       },
-      "execution_count": 123,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
